crates/auryn-compiler/src/auryn/air/snapshots/auryn_compiler__auryn__air__tests__intrinsics-4.snap
---
source: crates/auryn-compiler/src/auryn/air/mod.rs
expression: "compile_wrapped(\"let a: I64 = arrayGet(arrayOfZeros(3), 1)\")"
---
(
    Air {
        globals: Globals {
            functions: {
                AirFunctionId(
                    AirStaticValueId(
                        SyntaxId {
                            file_id: Some(
                                FileId(
                                    1,
                                ),
                            ),
                            number: 33395336219903,
                        },
                    ),
                ): AirFunction {
                    type: FunctionItem(
                        TypeId {
                            id: SyntaxId {
                                file_id: Some(
                                    FileId(
                                        1,
                                    ),
                                ),
                                number: 33395336219903,
                            },
                            kind: "auryn_compiler::auryn::air::typecheck::types::FunctionItemType",
                        },
                    ),
                    ident: "main",
                    blocks: {
                        AirBlockId(
                            0,
                        ): AirBlock {
                            nodes: [
                                AirNode {
                                    id: SyntaxId {
                                        file_id: Some(
                                            FileId(
                                                1,
                                            ),
                                        ),
                                        number: 76332197074064,
                                    },
                                    kind: Assignment(
                                        Assignment {
                                            target: AirLocalValueId(
                                                0,
                                            ),
                                            expected_type: Some(
                                                Application {
                                                    id: SyntaxId {
                                                        file_id: Some(
                                                            FileId(
                                                                1,
                                                            ),
                                                        ),
                                                        number: 109727533293967,
                                                    },
                                                    type: Path {
                                                        base_id: SyntaxId {
                                                            file_id: Some(
                                                                FileId(
                                                                    1,
                                                                ),
                                                            ),
                                                            number: 119269057928225,
                                                        },
                                                        base: Resolved(
                                                            I64,
                                                        ),
                                                        segments: [],
                                                    },
                                                    generic_arguments: [],
                                                },
                                            ),
                                            expression: AirExpression {
                                                id: SyntaxId {
                                                    file_id: Some(
                                                        FileId(
                                                            1,
                                                        ),
                                                    ),
                                                    number: 143122869513870,
                                                },
                                                type: Computed(
                                                    I64,
                                                ),
                                                kind: Call(
                                                    Call {
                                                        function: AirExpression {
                                                            id: SyntaxId {
                                                                file_id: Some(
                                                                    FileId(
                                                                        1,
                                                                    ),
                                                                ),
                                                                number: 157435156465257,
                                                            },
                                                            type: Computed(
                                                                Intrinsic(
                                                                    TypeId {
                                                                        id: SyntaxId {
                                                                            file_id: None,
                                                                            number: 1,
                                                                        },
                                                                        kind: "auryn_compiler::auryn::air::typecheck::types::IntrinsicType",
                                                                    },
                                                                ),
                                                            ),
                                                            kind: Variable(
                                                                Intrinsic(
                                                                    ArrayGet,
                                                                ),
                                                            ),
                                                        },
                                                        arguments: [
                                                            AirExpression {
                                                                id: SyntaxId {
                                                                    file_id: Some(
                                                                        FileId(
                                                                            1,
                                                                        ),
                                                                    ),
                                                                    number: 181288968050902,
                                                                },
                                                                type: Computed(
                                                                    Array(
                                                                        TypeId {
                                                                            id: SyntaxId {
                                                                                file_id: None,
                                                                                number: 1,
                                                                            },
                                                                            kind: "auryn_compiler::auryn::air::typecheck::types::ArrayType",
                                                                        },
                                                                    ),
                                                                ),
                                                                kind: Call(
                                                                    Call {
                                                                        function: AirExpression {
                                                                            id: SyntaxId {
                                                                                file_id: Some(
                                                                                    FileId(
                                                                                        1,
                                                                                    ),
                                                                                ),
                                                                                number: 195601255002289,
                                                                            },
                                                                            type: Computed(
                                                                                Intrinsic(
                                                                                    TypeId {
                                                                                        id: SyntaxId {
                                                                                            file_id: None,
                                                                                            number: 2,
                                                                                        },
                                                                                        kind: "auryn_compiler::auryn::air::typecheck::types::IntrinsicType",
                                                                                    },
                                                                                ),
                                                                            ),
                                                                            kind: Variable(
                                                                                Intrinsic(
                                                                                    ArrayOfZeros,
                                                                                ),
                                                                            ),
                                                                        },
                                                                        arguments: [
                                                                            AirExpression {
                                                                                id: SyntaxId {
                                                                                    file_id: Some(
                                                                                        FileId(
                                                                                            1,
                                                                                        ),
                                                                                    ),
                                                                                    number: 224225828905063,
                                                                                },
                                                                                type: Computed(
                                                                                    I32,
                                                                                ),
                                                                                kind: Constant(
                                                                                    Number(
                                                                                        3,
                                                                                    ),
                                                                                ),
                                                                            },
                                                                        ],
                                                                        generic_arguments: Computed(
                                                                            [],
                                                                        ),
                                                                    },
                                                                ),
                                                            },
                                                            AirExpression {
                                                                id: SyntaxId {
                                                                    file_id: Some(
                                                                        FileId(
                                                                            1,
                                                                        ),
                                                                    ),
                                                                    number: 257621165124966,
                                                                },
                                                                type: Computed(
                                                                    I32,
                                                                ),
                                                                kind: Constant(
                                                                    Number(
                                                                        1,
                                                                    ),
                                                                ),
                                                            },
                                                        ],
                                                        generic_arguments: Computed(
                                                            [],
                                                        ),
                                                    },
                                                ),
                                            },
                                        },
                                    ),
                                },
                            ],
                            finalizer: Return(
                                Null(
                                    SyntaxId {
                                        file_id: Some(
                                            FileId(
                                                1,
                                            ),
                                        ),
                                        number: 66790672439806,
                                    },
                                ),
                            ),
                        },
                    },
                },
            },
        },
        ty_ctx: TypeContext { .. },
    },
    Diagnostics {
        diagnostics: [],
    },
)
