crates/auryn-compiler/src/auryn/air/snapshots/auryn_compiler__auryn__air__tests__intrinsics.snap
---
source: crates/auryn-compiler/src/auryn/air/mod.rs
expression: "compile_wrapped(\"let a: () = print(1)\")"
---
(
    Air {
        globals: Globals {
            functions: {
                AirFunctionId(
                    AirStaticValueId(
                        SyntaxId {
                            file_id: Some(
                                FileId(
                                    1,
                                ),
                            ),
                            number: 44780109931235,
                        },
                    ),
                ): AirFunction {
                    type: FunctionItem(
                        TypeId {
                            id: SyntaxId {
                                file_id: Some(
                                    FileId(
                                        1,
                                    ),
                                ),
                                number: 44780109931235,
                            },
                            kind: "auryn_compiler::auryn::air::typecheck::types::FunctionItemType",
                        },
                    ),
                    ident: "main",
                    blocks: {
                        AirBlockId(
                            0,
                        ): AirBlock {
                            nodes: [
                                AirNode {
                                    id: SyntaxId {
                                        file_id: Some(
                                            FileId(
                                                1,
                                            ),
                                        ),
                                        number: 102354536985680,
                                    },
                                    kind: Assignment(
                                        Assignment {
                                            target: AirLocalValueId(
                                                0,
                                            ),
                                            expected_type: Some(
                                                Unit,
                                            ),
                                            expression: AirExpression {
                                                id: SyntaxId {
                                                    file_id: Some(
                                                        FileId(
                                                            1,
                                                        ),
                                                    ),
                                                    number: 191914756848150,
                                                },
                                                type: Computed(
                                                    Structural(
                                                        TypeId {
                                                            id: SyntaxId {
                                                                file_id: None,
                                                                number: 1,
                                                            },
                                                            kind: "auryn_compiler::auryn::air::typecheck::types::StructuralType",
                                                        },
                                                    ),
                                                ),
                                                kind: Call(
                                                    Call {
                                                        function: AirExpression {
                                                            id: SyntaxId {
                                                                file_id: Some(
                                                                    FileId(
                                                                        1,
                                                                    ),
                                                                ),
                                                                number: 211106232532965,
                                                            },
                                                            type: Computed(
                                                                Intrinsic(
                                                                    TypeId {
                                                                        id: SyntaxId {
                                                                            file_id: None,
                                                                            number: 1,
                                                                        },
                                                                        kind: "auryn_compiler::auryn::air::typecheck::types::IntrinsicType",
                                                                    },
                                                                ),
                                                            ),
                                                            kind: Variable(
                                                                Intrinsic(
                                                                    Print,
                                                                ),
                                                            ),
                                                        },
                                                        arguments: [
                                                            AirExpression {
                                                                id: SyntaxId {
                                                                    file_id: Some(
                                                                        FileId(
                                                                            1,
                                                                        ),
                                                                    ),
                                                                    number: 249489183902595,
                                                                },
                                                                type: Computed(
                                                                    NumberLiteral(
                                                                        TypeId {
                                                                            id: SyntaxId {
                                                                                file_id: None,
                                                                                number: 1,
                                                                            },
                                                                            kind: "auryn_compiler::auryn::air::typecheck::types::NumberLiteralType",
                                                                        },
                                                                    ),
                                                                ),
                                                                kind: Constant(
                                                                    Number(
                                                                        1,
                                                                    ),
                                                                ),
                                                            },
                                                        ],
                                                        generic_arguments: Computed(
                                                            [],
                                                        ),
                                                    },
                                                ),
                                            },
                                        },
                                    ),
                                },
                            ],
                            finalizer: Return(
                                Null(
                                    SyntaxId {
                                        file_id: Some(
                                            FileId(
                                                1,
                                            ),
                                        ),
                                        number: 89560219862470,
                                    },
                                ),
                            ),
                        },
                    },
                },
            },
        },
        ty_ctx: TypeContext { .. },
    },
    Diagnostics {
        diagnostics: [],
    },
)
